fix(docs): improve developer documentation accuracy across all languages
Update dev/ documentation in all 7 languages (ja, en, de, es, fr, ko, zh-cn) to match the actual Fess codebase.